tests/invalid/pragma_source_file.m
:- pragma source_file("x.m").
:- module pragma_source_file.

:- interface.

:- type x ---> x.

:- an_error.
